Password Manager 21.4.2
* Updated and localized card templates
* Added missing styles